--- a/sources/app/src/main/res/values/strings.xml
+++ b/sources/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
 
     <string name="name_default">Huỳnh Phạm Phước Linh</string>
     <string name="email_default">linh.huynh.bku.99@hcmut.edu.vn</string>
+    <string name="login_upper">ĐĂNG NHẬP</string>
 </resources>
