ui home, button informaton

--- a/sources/app/src/main/res/values/strings.xml
+++ b/sources/app/src/main/res/values/strings.xml
@@ -16,4 +16,13 @@
     <string name="name_default">Huỳnh Phạm Phước Linh</string>
     <string name="email_default">linh.huynh.bku.99@hcmut.edu.vn</string>
     <string name="login_upper">ĐĂNG NHẬP</string>
+
+    <string name="string_button_profile">"Thông tin\ncá nhân"</string>
+    <string name="string_button_drawTree">"Vẽ sơ đồ\nPhả hệ"</string>
+    <string name="string_button_callLevel">"\nXưng hô"</string>
+    <string name="string_button_add">"Thêm\nthành viên"</string>
+    <string name="string_button_update">"Sửa\nthành viên"</string>
+    <string name="string_button_del">"Xoá\nthành viên"</string>
+    <string name="string_button_password">"Đổi\nmật khẩu"</string>
+    <string name="string_button_setting">"\nCài đặt"</string>
 </resources>
